--- a/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
+++ b/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
@@ -11,8 +11,9 @@
     <AssemblyName>MySQL2JavaCLS</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,7 +48,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>codingai.ico</ApplicationIcon>
+    <ApplicationIcon>database.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
@@ -80,6 +81,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="common.vb" />
     <Compile Include="frmMain.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -102,7 +104,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="MySQLConnect.vb" />
+    <Compile Include="MySQL2JavaCLSBuilder.vb" />
+    <Compile Include="MySQLDB.vb" />
     <Compile Include="MySQLConnector.vb" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +133,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="codingai.ico" />
+    <Content Include="database.ico" />
+    <None Include="Resources\JAVAforMYSQL_Header.txt" />
+    <Content Include="result.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
