--- a/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
+++ b/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="common.vb" />
+    <Compile Include="ConnProfiles.vb" />
     <Compile Include="frmExportConnectionSettings.Designer.vb">
       <DependentUpon>frmExportConnectionSettings.vb</DependentUpon>
     </Compile>
