--- a/MySQL2JavaCLS/packages.config
+++ b/MySQL2JavaCLS/packages.config
@@ -6,8 +6,10 @@
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net452" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.25" targetFramework="net452" />
+  <package id="MySqlConnector" version="1.3.11" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
   <package id="System.Memory" version="4.5.3" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
 </packages>
