[Improved] Add function return type as an Object.

--- a/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
+++ b/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
@@ -201,6 +201,7 @@
     <None Include="Resources\JAVAforMYSQL_REQFUNC_Delete.txt" />
     <None Include="Resources\JAVAforMYSQL_REQFUNC_IsExist.txt" />
     <None Include="Resources\JAVAforMYSQL_UCFUNC.txt" />
+    <Content Include="Resources\JAVAforMYSQL_Credits.txt" />
     <Content Include="result.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
