--- a/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
+++ b/MySQL2JavaCLS/MySQL2JavaCLS.vbproj
@@ -202,6 +202,7 @@
     <None Include="Resources\JAVAforMYSQL_REQFUNC_IsExist.txt" />
     <None Include="Resources\JAVAforMYSQL_UCFUNC.txt" />
     <Content Include="Resources\JAVAforMYSQL_Credits.txt" />
+    <None Include="Resources\JAVAforMYSQL_ToClassInfo.txt" />
     <Content Include="result.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
